--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -41,3 +41,7 @@
 		}
 	}
 }
+
+.mobile-header {
+  margin-bottom: 60px;
+}
